fix: fix overflowing headlines

--- a/src/sass/_theme_rst.sass
+++ b/src/sass/_theme_rst.sass
@@ -22,6 +22,8 @@
 		margin-bottom: $space-m + 0.18rem
 		font-weight: calc(700 * var(--font-weight-factor))
 		color: $headline
+		max-width: 100%
+		overflow-wrap: break-word
 
 	h2
 		font-size: 1.8rem
